Add auto-deployment system with CI/CD pipeline
- Add scripts/auto-deploy.sh for local/docker/k8s/helm deployment
- Add .github/workflows/auto-deploy.yml for GitHub Actions CI/CD
- Add npm deploy scripts for easy access
- Supports continuous deployment mode
- Includes build, test, package, and deploy steps

--- a/package.json
+++ b/package.json
@@ -41,7 +41,14 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "deploy": "bash scripts/auto-deploy.sh --mode local",
+    "deploy:docker": "bash scripts/auto-deploy.sh --mode docker",
+    "deploy:k8s": "bash scripts/auto-deploy.sh --mode k8s",
+    "deploy:helm": "bash scripts/auto-deploy.sh --mode helm",
+    "deploy:continuous": "bash scripts/auto-deploy.sh --mode local --continuous",
+    "deploy:pause": "bash scripts/auto-deploy.sh --pause",
+    "deploy:resume": "bash scripts/auto-deploy.sh --resume"
   },
   "eslintConfig": {
     "extends": [
