feat: Add auto-commit and auto-PR workflows
✨ Features:
- GitHub Actions workflow for auto-commit on push
- Scheduled workflow (every 30 min) for auto-commit
- Manual auto-commit.sh script with PR creation
- File watcher script for continuous monitoring
- Comprehensive documentation in AUTO_COMMIT_GUIDE.md

🤖 Automation:
- Auto-creates timestamped branches
- Auto-commits all changes
- Auto-pushes to GitHub
- Auto-creates pull requests with labels

📚 Documentation includes setup, usage, and troubleshooting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,7 @@
       "fileMatch": ["/package-lock.json"],
       "url": "https://json.schemastore.org/package-lock.json"
     }
-  ]
+  ],
+  "amplicode.server.tsConfig": "./tsconfig.node.json",
+  "svn.ignoreMissingSvnWarning": true
 }
