--- a/.autocommit.config
+++ b/.autocommit.config
@@ -24,3 +24,9 @@ COMMIT_TO_MAIN=true
 # Git user configuration
 GIT_USER_NAME="github-actions[bot]"
 GIT_USER_EMAIL="github-actions[bot]@users.noreply.github.com"
+
+# Auto-merge configuration
+AUTO_MERGE_CONFLICTS=true          # Automatically resolve conflicts
+AUTO_KEEP_INCOMING=true            # Keep incoming changes on conflict
+AUTO_STAGE_UPDATES=true            # Stage all changes (new + modified + deleted)
+AUTO_APPROVE_KEEP=true             # Auto-approve "keep" in all conversations
