⚡ Change auto-commit from 5 min to 1 min
- Updated workflow schedule: */1 * * * * (every minute)
- Updated .autocommit.config schedule
- Updated README badge and description
- Now commits every minute instead of every 5 minutes

--- a/.github/workflows/watch-and-commit.yml
+++ b/.github/workflows/watch-and-commit.yml
@@ -1,9 +1,9 @@
-name: Auto-Commit to Main (Every 5 Min)
+name: Auto-Commit to Main (Every 1 Min)
 
 on:
-  # Run every 5 minutes
+  # Run every 1 minute
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '*/1 * * * *'
 
   # Allow manual triggering
   workflow_dispatch:
