--- a/.autocommit.config
+++ b/.autocommit.config
@@ -10,13 +10,14 @@ WATCH_FOLDERS="src/ backend/ .github/ public/ docs/"
 COMMIT_MESSAGE_TEMPLATE="🤖 Auto-commit: {timestamp}"
 
 # Schedule (cron format)
-# Current: Every 5 minutes
+# Current: Every 1 minute
 # Examples:
+#   */1 * * * *   - Every 1 minute
 #   */5 * * * *   - Every 5 minutes
 #   */10 * * * *  - Every 10 minutes
 #   */15 * * * *  - Every 15 minutes
 #   0 * * * *     - Every hour
-SCHEDULE="*/5 * * * *"
+SCHEDULE="*/1 * * * *"
 
 # Whether to commit directly to main (true) or create PRs (false)
 COMMIT_TO_MAIN=true
