fix: resolve github workflow secret access errors and apply prettier formatting
- Fix GitHub Actions workflow secret access patterns
- Remove invalid secrets context checks from if conditions
- Apply Prettier formatting to documentation files
- Format code files per ESLint/Prettier rules

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,7 +109,7 @@ jobs:
     needs: frontend
     runs-on: ubuntu-latest
     timeout-minutes: 20
-    if: ${{ github.event_name == 'pull_request' && secrets.VERCEL_TOKEN != '' && secrets.VERCEL_ORG_ID != '' && secrets.VERCEL_PROJECT_ID != '' }}
+    if: ${{ github.event_name == 'pull_request' }}
 
     steps:
       - name: Checkout repository
