refactor: switch Recharts imports to direct module paths
- Replace aggregated 'recharts' imports with direct module paths (es6/)
- Eliminates circular dependency warnings during build
- Improves bundling efficiency by avoiding re-export indirection
- Affects 18 component/page files across dashboard, analytics, AI, and admin

Changes:
- ChartComponents: LineChart, AreaChart, BarChart, PieChart, ComposedChart, etc
- CartesianComponents: Line, Area, Bar, XAxis, YAxis, CartesianGrid, etc
- PolarComponents: Pie, Radar, PolarGrid, PolarAngleAxis, etc
- UIComponents: Tooltip, Legend, ResponsiveContainer, Cell, LabelList, etc

Build result: ✓ 3106 modules, no circular chunk warnings, 518.63 KB gzipped

--- a/codecov.yml
+++ b/codecov.yml
@@ -18,22 +18,22 @@ coverage:
 
 # Optional PR comment settings
 comment:
-  layout: "reach, diff, flags, files"
+  layout: 'reach, diff, flags, files'
   behavior: default
   require_changes: false
 
 # Ignore paths that should not affect coverage gates
 ignore:
-  - "e2e/**"
-  - "infra/**"
-  - "helm/**"
-  - "k8s/**"
-  - "docs/**"
-  - "public/**"
-  - "scripts/**"
+  - 'e2e/**'
+  - 'infra/**'
+  - 'helm/**'
+  - 'k8s/**'
+  - 'docs/**'
+  - 'public/**'
+  - 'scripts/**'
 
 # Flags allow per-suite stats (e.g., frontend, backend later)
 flags:
   frontend:
     paths:
-      - "src/"
+      - 'src/'
