--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
     "lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
     "typecheck": "tsc --noEmit",
     "type-check": "tsc --noEmit",
-    "fix:all": "bash scripts/fix-all.sh"
+    "fix:all": "bash scripts/fix-all.sh",
+    "coverage:validate": "bash scripts/validate-coverage.sh",
+    "coverage:watch": "bash scripts/watch-coverage.sh"
   },
   "eslintConfig": {
     "extends": [
@@ -85,15 +87,19 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
+    "@vitest/coverage-v8": "^4.0.16",
     "autoprefixer": "^10.4.23",
     "daisyui": "^5.5.14",
     "eslint": "^9.39.2",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.26",
     "globals": "^16.5.0",
+    "husky": "^9.1.7",
     "jsdom": "^27.4.0",
+    "lint-staged": "^16.2.7",
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
+    "prop-types": "^15.8.1",
     "tailwindcss": "^3.4.19",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.50.1",
