--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-is": "^19.2.3",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.11.0",
     "recharts": "^3.6.0",
+    "reselect": "^5.1.1",
     "socket.io-client": "^4.8.3",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
